@@ -1,3 +1,7 @@
+2008-01-17  David Bateman  <dbateman@free.fr>
+
+	* ov-fcn-inline.cc: Add tests for Finline.
+
 2008-01-17  Ben Abbott <bpabbott@mac.com>
 
 	* load-path.cc (F__pathorig__): Rename from Fpathdef.
